--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>My Favorite Animal</h1>
+    
+    <img src="https://tse1.mm.bing.net/th?id=OIP.OT_m1hzXibs-tdpvR-EUkQHaE8&pid=Api&P=0&h=180" alt="Description of your favorite animal">
     <script type="text/javascript" src="./script.js">
 </script>
 
